--- a/cypress-simple/package.json
+++ b/cypress-simple/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cypress": "^12.9.0",
+    "cypress-real-events": "^1.7.6",
     "typescript": "^5.0.2"
   }
 }
